fix: spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -235,7 +235,7 @@ ul {
 #nav-menu li a::after {
     content: '';
     position: absolute;
-    bottom: 0;
+    bottom: -4px;
     left: 50%;
     width: 0;
     height: 3px;
@@ -288,7 +288,7 @@ ul {
     content: '';
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: -4px;
     width: 60px;
     height: 4px;
     background: linear-gradient(to right, var(--gradient-start), var(--gradient-end));
